--- a/demo/src/main/mc/layout/mc_item_compare_line.xml
+++ b/demo/src/main/mc/layout/mc_item_compare_line.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@null">
 
     <TextView
         android:id="@+id/tv_key"
         android:layout_width="@dimen/mc_dimen_85_dip"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_height="match_parent"
         android:gravity="center" />
 
-    <com.hans.demo.mc.CellsRecyclerView
+    <View
+        android:layout_width="0.5dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/mc_dimen_85_dip"
+        android:background="@color/mc_10_black" />
+
+    <com.hans.demo.mc.McCompareHeaderRecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/mc_dimen_85_dip">
 
-    </com.hans.demo.mc.CellsRecyclerView>
+    </com.hans.demo.mc.McCompareHeaderRecyclerView>
 
     <TextView
         android:id="@+id/tv_same"
