--- a/demo/src/main/mc/layout/mc_item_car_compare_car_name.xml
+++ b/demo/src/main/mc/layout/mc_item_car_compare_car_name.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/mc_dimen_145_dip"
+    android:background="@null"
     android:layout_height="match_parent">
 
     <FrameLayout
