--- a/demo/src/main/mc/layout/activity_a1.xml
+++ b/demo/src/main/mc/layout/activity_a1.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mc_white"
-    android:orientation="vertical"
     tools:context=".A1">
 
     <FrameLayout
@@ -40,7 +39,7 @@
             android:textSize="14sp" />
 
         <ImageView
-            android:id="@+id/tv_right"
+            android:id="@+id/iv_right"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="right|center_vertical"
@@ -61,6 +60,7 @@
         android:id="@+id/top_line"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
         android:background="@null"
         android:orientation="horizontal">
 
@@ -94,28 +94,28 @@
 
     </FrameLayout>
 
-
+    <!--底部参数配置-->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/top_line"
         android:background="@null">
 
-        <!--底部参数配置-->
-        <FrameLayout
-            android:id="@+id/df_frame"
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_params"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_params"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </android.support.v7.widget.RecyclerView>
-
-        </FrameLayout>
+        </android.support.v7.widget.RecyclerView>
 
     </FrameLayout>
 
+    <include
+        android:id="@+id/menu_frame"
+        layout="@layout/mc_view_compare_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar" />
 
-</LinearLayout>
+</RelativeLayout>
