--- a/demo/src/main/mc/layout/mc_item_compare_line.xml
+++ b/demo/src/main/mc/layout/mc_item_compare_line.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/tv_key"
-        android:layout_width="@dimen/mc_dimen_95_dip"
+        android:layout_width="@dimen/mc_dimen_85_dip"
         android:layout_height="match_parent"
         android:gravity="center"
         android:textColor="@color/mc_color_667187"
@@ -15,16 +15,16 @@
     <View
         android:layout_width="0.5dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/mc_dimen_85_dip"
+        android:layout_marginLeft="@dimen/mc_dimen_90_dip"
         android:background="@color/mc_10_black" />
 
-    <com.hans.demo.mc.CellsRecyclerView
+    <com.hans.demo.mc.McMcCellsRecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/mc_dimen_85_dip">
+        android:layout_marginLeft="@dimen/mc_dimen_90_dip">
 
-    </com.hans.demo.mc.CellsRecyclerView>
+    </com.hans.demo.mc.McMcCellsRecyclerView>
 
     <TextView
         android:id="@+id/tv_same"
